// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-named-exports exported alias name 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "exportedStory": Object {
      "arguments": Array [],
      "attributes": Object {
        "name": "Custom story name",
      },
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-named-exports re-exported name 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {},
}
`;

exports[`csf-named-exports story propery name 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "attributes": Object {
        "name": "Custom story name",
      },
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
}
`;
